--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="keywords" content="">
         <meta name="author" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="google-site-verification" content="G-4VJY4Yo88FsLa1Q5rLqw2CTYEkgIRBhRFrsNO3f4o" />
         <link href="img/favicon.png" rel="icon">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
         <link rel="stylesheet" href="css/font-awesome.min.css"/>
@@ -20,7 +21,7 @@
         <div class="banner">
             <div class="container">
                 <div class="logo">
-                    <h1><a href="index.html">FORTFOLIO</a></h1>
+                    <h1><a href="index.html">PORTFOLIO</a></h1>
                 </div>	
                 <div class="banner-info">
                     <h2>Hi,I am Tripti Trisha</h2>
